--- a/views/layout.jade
+++ b/views/layout.jade
@@ -217,7 +217,7 @@ html
         ul.nav
           li.text-center(style='margin-left:80px;margin-right:80px;')
             p(style='margin-top:15px;') 
-              a.navbar-link(href='https://github.com/iquidus/explorer', target='_blank') Powered by Iquidus Explorer 
+              a.navbar-link(href='https://github.com/white92d15b7', target='_blank')  NLX Development Team 
       span.connections
         label#lblBlockcount.label.label-default -
         label#lblConnections.label.label-default -
